# Voice-Agent---Appointment-Agent

./: .eslintrc.js  .gitignore  GETTING_STARTED.md  MIGRATION_CHECKLIST.md  README.md  REFACTOR_GUIDE.md  package.json  plan.md  pnpm-lock.yaml  tactical-design.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Phase1/: .env.example  .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  PHASE1.md  QUICKREF.md  README.md  STATUS.md  check_setup.py  pyproject.toml  requirements.txt  setup.sh
Phase1/agent/: __init__.py  config.py  main.py  pipeline.py
Phase1/tests/: __init__.py  test_config.py
Phase2/: .env.example  .gitignore  GOOGLE_CALENDAR_SETUP.md  PHASE2_SUMMARY.md  README.md  check_setup.py  requirements.txt  setup.sh
Phase2/agent/: __init__.py  config.py  main.py  pipeline.py
Phase2/tests/: __init__.py  test_calendar.py
Phase3/: .env.example  .gitignore  PHASE3_SUMMARY.md  README.md  TWILIO_SETUP.md  check_setup.py  requirements.txt  setup.sh
Phase3/agent/: __init__.py  config.py  main.py  pipeline.py
Phase3/api/: __init__.py
Phase3/tests/: __init__.py  test_telephony.py
Phase4/: .env.example  requirements.txt
Phase4/agent/: __init__.py  config.py
Phase4/api/: server.py
Phase5/: .env.example  requirements.txt
Phase5/agent/: __init__.py
Phase6/: QUICKSTART.md  README.md  test_call.sh
Phase6-Local/: .env.example  QUICKSTART-LOCAL.md  SETUP.md  docker-compose.yml  livekit.yaml  requirements.txt
Phase6-Local/agent/: config.py  local_llm.py  local_stt.py  local_tts.py
Phase6/agent/: config.py
(+29 files in other folders)
